[project]
name = "trackmancaddy"
version = "0.1.0"
description = "Lightweight Python software to help speed and flow of using Trackman Software"
authors = [
    {name = "Frank Fiumefreddo",email = ""}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "keyboard>=0.13.5",
  "pyttsx3>=2.99",
  "pyautogui>=0.9.54",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
